[package]
name = "encrypt"
version = "0.1.2"
authors = ["ptechen <ptechen@github.com>"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/encrypt/blob/master/README.md"
repository = "https://github.com/ptechen/encrypt.git"
description = "Encrypt command line tool. Support md5 & sha1 & sha2 & sha3 encryption for file and string."
license-file = "license"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.8"
failure = "0.1.6"
exitfailure = "0.5.1"
rust-crypto = "0.2.36"